--- a/package.json
+++ b/package.json
@@ -26,10 +26,13 @@
     "jsonwebtoken": "^7.0.1",
     "koa": "^1.2.0",
     "koa-bodyparser": "^2.2.0",
+    "koa-generic-session": "^1.11.1",
+    "koa-redis": "^2.1.1",
     "koa-router": "^5.4.0",
     "lodash": "^4.13.1",
     "log4js": "^0.6.36",
     "log4js-logstash": "^0.2.2",
+    "logstash-client": "^1.0.2",
     "mongoose": "^4.4.19",
     "redis": "^2.6.2",
     "superagent": "^2.0.0"
