--- a/web/package.json
+++ b/web/package.json
@@ -11,6 +11,7 @@
   "devDependencies": {
     "babel-loader": "^6.2.4",
     "babel-plugin-antd": "^0.4.0",
+    "babel-plugin-transform-async-to-generator": "^6.8.0",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-react": "^6.5.0",
@@ -36,12 +37,14 @@
   "dependencies": {
     "antd": "^1.6.2",
     "babel-polyfill": "^6.9.1",
+    "core-decorators": "^0.12.3",
     "immutable": "^3.8.1",
     "jquery.terminal": "^0.10.12",
     "lodash": "^4.13.1",
     "react": "^15.1.0",
     "react-dom": "^15.1.0",
     "react-router": "^2.5.1",
-    "redux": "^3.5.2"
+    "redux": "^3.5.2",
+    "superagent": "^2.0.0"
   }
 }
